[gd_scene load_steps=5 format=3 uid="uid://djgld28m7mftt"]

[ext_resource type="Script" uid="uid://q2mbc7idrx" path="res://scripts/items/collectibles/base_collectible.gd" id="1_u72qt"]
[ext_resource type="Script" uid="uid://3u7i3d58hkla" path="res://scripts/utils/interactive_area_2d.gd" id="2_vaoyt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vaoyt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ucou"]
radius = 5.0
height = 10.0

[node name="Collectible" type="Node2D"]
script = ExtResource("1_u72qt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vaoyt")

[node name="InteractiveArea2D" type="Area2D" parent="."]
collision_mask = 4
script = ExtResource("2_vaoyt")
metadata/_custom_type_script = "uid://3u7i3d58hkla"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea2D"]
shape = SubResource("CapsuleShape2D_1ucou")

[connection signal="interaction_available" from="InteractiveArea2D" to="." method="_on_interaction_available"]
