[gd_scene load_steps=17 format=3 uid="uid://slg0p8vvevb8"]

[ext_resource type="Texture2D" uid="uid://cpvkepx2kh0ku" path="res://assets/sprites/objects/door/closing.png" id="1_7l4jk"]
[ext_resource type="Script" uid="uid://l7xnwnjlisqx" path="res://scripts/object/door/win_door.gd" id="1_x6qlk"]
[ext_resource type="Texture2D" uid="uid://bywbldgj5n4af" path="res://assets/sprites/objects/door/idle.png" id="2_8ymf3"]
[ext_resource type="Texture2D" uid="uid://cwhw7q87xsjwa" path="res://assets/sprites/objects/door/opening.png" id="3_2wyd1"]
[ext_resource type="Script" uid="uid://3u7i3d58hkla" path="res://scripts/utils/interactive_area_2d.gd" id="4_l7mgg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mpm61"]
atlas = ExtResource("1_7l4jk")
region = Rect2(0, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qpce"]
atlas = ExtResource("1_7l4jk")
region = Rect2(46, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmx3w"]
atlas = ExtResource("1_7l4jk")
region = Rect2(92, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4f8s"]
atlas = ExtResource("3_2wyd1")
region = Rect2(0, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iylg"]
atlas = ExtResource("3_2wyd1")
region = Rect2(46, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ubn"]
atlas = ExtResource("3_2wyd1")
region = Rect2(92, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_laebk"]
atlas = ExtResource("3_2wyd1")
region = Rect2(138, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3sux"]
atlas = ExtResource("3_2wyd1")
region = Rect2(184, 0, 46, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_ffxa6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpm61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qpce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmx3w")
}],
"loop": false,
"name": &"closing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8ymf3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4f8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iylg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ubn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laebk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3sux")
}],
"loop": false,
"name": &"opening",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7l4jk"]
size = Vector2(14, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7mgg"]
size = Vector2(32, 47)

[node name="Door" type="Node2D"]
script = ExtResource("1_x6qlk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -28)
sprite_frames = SubResource("SpriteFrames_ffxa6")
animation = &"opening"

[node name="InteractiveArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("4_l7mgg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea2D"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_7l4jk")

[node name="DetectionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
position = Vector2(0, -26.5)
shape = SubResource("RectangleShape2D_l7mgg")

[connection signal="interacted" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_interacted"]
[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_exited"]
